Update: Page Seguros

--- a/index.html
+++ b/index.html
@@ -521,6 +521,104 @@
         </div>
     </section>
 
+    <!-- =========== PAGE SEGUROS =========== -->
+    <section class="bg-black-dark-soft">
+        <section class="container">
+            <h5 class="color-gray">Escolha o seguro</h5>
+            <h1 class="color-white bold mb-8">você seguro<span>.</span></h1>
+
+            <div class="row flex-center flex-wrap">
+                <div class="grid-6 bg-black-dark seguros-card">
+                    <div>
+                        <div class="flex-space flex-wrap seguros-title">
+                            <h3 class="uppercase bold color-gray">Prata</h3>
+                            <div>
+                                <h3 class="bold color-white">R$ 199</h3>
+                                <blockquote class="p3 color-gray text-right">mensal</blockquote>
+                            </div>
+                        </div>
+
+                        <ul class="seguros-beneficios">
+                            <li class="p1 color-white mt-3">Duas trocas por ano</li>
+                            <li class="p1 color-white mt-3">Assistência técnica</li>
+                            <li class="p1 color-white mt-3">Suporte 08h às 18h</li>
+                            <li class="p1 color-white mt-3">Cobertura estadual</li>
+                            <a href="" class="btn-2 mt-4">INSCREVA-SE</a>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="grid-6 bg-black-dark seguros-card">
+                    <div>
+                        <div class="flex-space flex-wrap seguros-title">
+                            <h3 class="uppercase bold color-primary">Ouro</h3>
+                            <div>
+                                <h3 class="bold color-white">R$ 299</h3>
+                                <blockquote class="p3 color-gray text-right">mensal</blockquote>
+                            </div>
+                        </div>
+
+                        <ul class="seguros-beneficios">
+                            <li class="p1 color-white mt-3">Cinco trocas por ano</li>
+                            <li class="p1 color-white mt-3">Assistência especial</li>
+                            <li class="p1 color-white mt-3">Suporte 24h</li>
+                            <li class="p1 color-white mt-3">Cobertura nacional</li>
+                            <li class="p1 color-white mt-3">Desconto em parceiros</li>
+                            <li class="p1 color-white mt-3">Acesso ao Clube Bikcraft</li>
+                            <a href="" class="btn mt-4">INSCREVA-SE</a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </section>
+
+    <section class="bg-black-dark">
+        <div class="container">
+            <h1 class="color-white bold mb-8">nossas vantagens<span>.</span></h1>
+            <div class="row flex-start-row flex-wrap">
+                <div class="grid-4">
+                    <img src="svg/icon-eletrica.svg" class="icon" />
+                    <h5 class="color-white bold mb-1">Reparo Elétrico</h5>
+                    <p class="color-gray">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+                </div>
+                <div class="grid-4">
+                    <img src="svg/icon-carbono.svg" class="icon" />
+                    <h5 class="color-white bold mb-1">Material</h5>
+                    <p class="color-gray">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+                </div>
+                <div class="grid-4">
+                    <img src="svg/icon-eletrica.svg" class="icon" />
+                    <h5 class="color-white bold mb-1">Sustentável</h5>
+                    <p class="color-gray">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
+                </div>
+            </div>
+                        <div class="row flex-start-row flex-wrap">
+                <div class="grid-4">
+                    <img src="svg/icon-rastreador.svg" class="icon" />
+                    <h5 class="color-white bold mb-1">Recuperação</h5>
+                    <p class="color-gray">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                </div>
+                <div class="grid-4">
+                    <img src="svg/icon-seguro.svg" class="icon" />
+                    <h5 class="color-white bold mb-1">Segurança</h5>
+                    <p class="color-gray">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                </div>
+                <div class="grid-4">
+                    <img src="svg/icon-velocidade.svg" class="icon" />
+                    <h5 class="color-white bold mb-1">Rapidez</h5>
+                    <p class="color-gray">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container">
+        <h1 class="color-black bold">perguntas frequentes<span>.</span></h1>
+    </section>
+
+
 
 </body>
 
