:construction: Page Contatos...

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <!-- =========== PAGE SEGUROS =========== -->
     <section class="bg-black-dark-soft">
         <section class="container">
-            <h5 class="color-gray">Escolha o seguro</h5>
+            <h5 class="color-gray uppercase">Escolha o seguro</h5>
             <h1 class="color-white bold mb-8">você seguro<span>.</span></h1>
 
             <div class="row flex-center flex-wrap">
@@ -594,7 +594,7 @@
                     <p class="color-gray">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
                 </div>
             </div>
-                        <div class="row flex-start-row flex-wrap">
+            <div class="row flex-start-row flex-wrap">
                 <div class="grid-4">
                     <img src="svg/icon-rastreador.svg" class="icon" />
                     <h5 class="color-white bold mb-1">Recuperação</h5>
@@ -618,7 +618,70 @@
         <h1 class="color-black bold">perguntas frequentes<span>.</span></h1>
     </section>
 
+    <!-- =========== PAGE CONTATO =========== -->
+    <section class="bg-black-dark-soft shaddow-white">
+        <div class="container p-0">
+            <h5 class="color-gray uppercase mt-8">Respostas em até 24h</h5>
+            <h1 class="color-white bold mb-8">nosso contato<span>.</span></h1>
+            <div class="row table-contact">
+                <div class="bg-black-dark p-7">
+                    <p class="bold color-white">Loja Online</p>
+                    <div class="mt-7 ml-4">
+                        <p class="relative icon-local">Rua Ali Perto, 35</p>
+                        <p>Rio de Janeiro - RJ</p>
+                        <p>Brasil - Terra - Vita Láctea</p>
+                    </div>
+                    <div class="mt-4 ml-4">
+                        <p class="relative icon-email">vendas@bikcraft.com</p>
+                        <p>assistencia@bikcraft.com</p>
+                    </div>
+                    <div class="mt-4 ml-4">
+                        <p class="relative icon-telefone">+55 21 9999-9999</p>
+                    </div>
+                    <div class="flex-start-row mt-4">
+                        <a href=""><img src="svg/icon-instagram-p.svg" class="pr-4" /></a>
+                        <a href=""><img src="svg/icon-facebook-p.svg" class="pr-4" /></a>
+                        <a href=""><img src="svg/icon-youtube-p.svg" class="pr-4" /></a>
+                    </div>
+                </div>
 
+                <div class="bg-white-light">
+                    <form>
+                        <div class="flex form-wrap">
+                            <div class="w-50 form-mobile">
+                                <label for="nome">
+                                    <p class="bold color-black">Nome</p>
+                                </label>
+                                <input type="text" name="nome" id="nome" placeholder="Seu nome" />
+                            </div>
+                            <div class="ml-3 w-50 form-mobile">
+                                <label for="tel">
+                                    <p class="color-black bold">Telefone</p>
+                                </label>
+                                <input type="number" name="tel" id="tel" placeholder="(21) 9999-9999" />
+                            </div>
+                        </div>
+
+                        <div class="my-3">
+                            <label for="email">
+                                <p class="bold color-black">Email</p>
+                            </label>
+                            <input type="email" name="email" id="email" placeholder="contato@email.com" />
+                        </div>
+
+                        <div class="my-3">
+                            <label for="messenger">
+                                <p class="color-black bold">Mensagem</p>
+                            </label>
+                            <textarea name="messenger" id="messenger" cols="30" rows="10"></textarea>
+                        </div>
+
+                        <a href="" class="btn uppercase">Enviar Mensagem</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
