Update: Page Seguros

--- a/index.html
+++ b/index.html
@@ -683,6 +683,45 @@
         </div>
     </section>
 
+    <section class="container">
+        <h1 class="bold color-black">lojas locais<span>.</span></h1>
+
+        <div class="row">
+            <div class="grid-6">
+                <img src="img/img-seguros-rio.png" alt="Rio de Janeiro" />
+                <h4 class="color-black bold relative ml-2 mt-4 local">Rio de Janeiro</h4>
+                <div class="flex ml-4 my-4 flex-wrap">
+                    <div class="bl-black pl-1 mr-6">
+                        <p>Rua Ali Perto, 25</p>
+                        <p>Rio de Janeiro - RJ</p>
+                    </div>
+                    <div class="bl-black pl-1">
+                        <p>rio@bikcraft.com</p>
+                        <p>21 9999-9999</p>
+                    </div>
+                </div>
+                <h6 class="bold color-black ml-2 relative clock">08-18h de seg à dom</h6>
+            </div>
+
+            <div class="grid-6">
+                <img src="img/img-seguros-sp.png" alt="São Paulo" />
+                <h4 class="color-black bold relative ml-2 mt-4 local">São Paulo</h4>
+                <div class="flex ml-4 my-4 flex-wrap">
+                    <div class="bl-black pl-1 mr-6">
+                        <p>Rua Ali Perto, 25</p>
+                        <p>São Paulo - SP</p>
+                    </div>
+                    <div class="bl-black pl-1">
+                        <p>sp@bikcraft.com</p>
+                        <p>11 9999-9999</p>
+                    </div>
+                </div>
+                <h6 class="bold color-black ml-3 relative clock">08-18h de seg à dom</h6>
+            </div>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
