--- a/index.html
+++ b/index.html
@@ -722,6 +722,40 @@
         </div>
     </section>
 
+    <!-- =========== PAGE TERMOS =========== -->
+    <section class="bg-black-dark-soft">
+        <div class="container">
+            <div>
+                <p class="p1 color-gray uppercase">Termos de uso</p>
+                <h1 class="color-white bold">termos e condições<span>.</span></h1>
+            </div>
+        </div>
+    </section>
+
+    <section class="container">
+        <div>
+            <h5 class="bold color-black mb-3">1. Política de Estorno</h5>
+            <p class="color-black">1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p> <br>
+            <p class="color-black">1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p> <br>
+            <p class="color-black">1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+        </div>
+
+        <div class="mt-6">
+            <h5 class="bold color-black mb-3">2. Conta do Usuário</h5>
+            <p class="color-black">2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro</p> <br>
+            <p class="color-black">2.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro</p> <br>
+            <p class="color-black">2.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro</p>
+        </div>
+
+        <div class="mt-6">
+            <h5 class="bold color-black mb-3">3. Seguro Bikcraft</h5>
+            <p class="color-black">3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p> <br>
+            <p class="color-black">3.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro</p> <br>
+            <p class="color-black">3.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro</p>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
